2008-08-03  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/spellcheck.c:
   Disable the Tools menu item and the keybinding callbacks when
   a dictionary could not be loaded.
   Improve error message when loading the chosen dictionary failed.


2008-07-20  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/spellcheck.c:
   Remove temporary testing code.
   Replace deprecated g_strncasecmp() with g_ascii_strncasecmp().


2008-07-16  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/spellcheck.c:
   Note: Don't use this revision for productive use!
   Experimental changes in word retrieval to work better with complex
   Unicode characters like in Hindi.
   Use Scintilla's messages for finding word start and end positions
   instead of my own variant which didn't work well in Hindi.
   Add a temporary option to switch between Geany's word retrieval
   method when showing the editor menu or use an alternative one
   (only for testing).
   This code is still in testing and should be considered as WIP.


2008-07-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/spellcheck.c:
   Update to Geany API 78 (GeanyEditor changes).


2008-07-12  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/spellcheck.c:
   Update to Geany API 75.


2008-07-05  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/spellcheck.c:
   Add option to enable/disable use of the messages window.
   Don't act on key release events when the input focus is not in the
   editor widget.
   Fix showing an empty Spellcheck menu item in the editor popup menu.
   Rename signal "populate-edit-menu" into "update-editor-menu".


2008-07-03  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/spellcheck.c:
   Create a new dict object when the default language in the preferences
   dialog was changed to actually use the new language.


2008-06-28  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/spellcheck.c: