@@ -1,3 +1,10 @@
+2008-09-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/spellcheck.c:
+   Add toolbar button to quickly enable/disable the
+   'check while typing' setting (closes #2062239).
+
+
 2008-08-03  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/spellcheck.c:
